--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
     </head>
 
     <body>
-        <div class="container">
+        <div class="jumbotron container">
             <div class="row">
-                // Your HTML HERE
-                
-                
+                <h1>Pig Latinizer</h1>
+                <div class="input-group">
+                    <span id="text" class="input-group-addon">Text</span>
+                    <input id="word" type="text" class="form-control" name="msg" placeholder="Enter Here">
+                    <button id="submit" type="button" class="btn btn-default btn-round-lg btn-lg">Submit</button>
+                </div>
+            </div>
+            <div>
+                <h2 id="result">Result: </h2>
             </div>
         </div>
  	</body>
