--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> Pig Latinizer </title>
+        <link rel="icon" href="https://lh3.googleusercontent.com/-cnlDgM3JEuhUu2xhX82fSt5unNFUlBD5bnPFzwIK5wBxzeQdV9dPVuYttwlb66k8w4T=w300">
+        <title> Cat Latinizer </title>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <!-- Your CSS -->
@@ -10,20 +11,22 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <!-- Your Javascript -->
         <script src="js/script.js"></script>
+        <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     </head>
 
     <body>
         <div class="jumbotron container">
             <div class="row">
-                <h1>Pig Latinizer</h1>
+                <h1>Cat Latinizer</h1>
                 <div class="input-group">
                     <span id="text" class="input-group-addon">Text</span>
-                    <input id="word" type="text" class="form-control" name="msg" placeholder="Enter Here">
+                    <input id="msg" type="text" class="form-control" name="msg" placeholder="Enter Here">
                     <button id="submit" type="button" class="btn btn-default btn-round-lg btn-lg">Submit</button>
+                    <button id="clear" type="button" class="btn btn-default btn-round-lg btn-lg">Clear</button>
                 </div>
             </div>
             <div>
-                <h2 id="result">Result: </h2>
+                <h2 id="result">Result</h2>
             </div>
         </div>
  	</body>
