--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="icon" href="https://lh3.googleusercontent.com/-cnlDgM3JEuhUu2xhX82fSt5unNFUlBD5bnPFzwIK5wBxzeQdV9dPVuYttwlb66k8w4T=w300">
-        <title> Cat Latinizer </title>
+        <link rel="icon" href="https://i.pinimg.com/originals/20/05/59/2005598a9e21e5ea4aa158ad625c5eea.jpg">
+        <title> Pig Latinizer </title>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <!-- Your CSS -->
@@ -17,7 +17,7 @@
     <body>
         <div class="jumbotron container">
             <div class="row">
-                <h1>Cat Latinizer</h1>
+                <h1>Pig Latinizer</h1>
                 <div class="input-group">
                     <span id="text" class="input-group-addon">Text</span>
                     <input id="msg" type="text" class="form-control" name="msg" placeholder="Enter Here">
